--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -14,6 +14,7 @@
   height: 80px;
   display: flex;
   /* Applying flex */
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  margin-left: 150px;
 }
