--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -3,6 +3,10 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*Always remember to put flex on the container or the parent element of the flex items*/
 }
 
 .box {
@@ -12,9 +16,4 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
-  display: flex;
-  /* Applying flex */
-  align-items: center;
-  justify-content: center;
-  margin-left: 150px;
 }
