--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -8,12 +12,18 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  margin: auto;
+  /* Need to figure out how to get that border around the logo */
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
+  /* How are these even spaced out bro?! */
 }
 
 a {
