--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,13 +6,15 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
-  display: flex;
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -21,6 +23,20 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+}
+
+.left-side, .right-side {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  align-content: space-around;
+  gap: 16px;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .logo {
@@ -46,4 +62,6 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
 }
