target div ul add display flex and put eveerything in rows with gap

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -26,6 +26,12 @@ input {
   margin-bottom: 16px;
 }
 
+div ul {
+  display: flex;
+  flex-direction: row;
+  gap: 16px
+}
+
 .header {
   position: relative;
   bottom: 0;
