Remove bullets change color of header and footer items

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -28,8 +28,15 @@ input {
 
 div ul {
   display: flex;
-  flex-direction: row;
-  gap: 16px
+  flex-direction: row-reverse;
+  gap: 16px;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+
 }
 
 .header {
