--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -33,6 +33,8 @@ div ul {
   list-style: none;
 }
 
+li {}
+
 a {
   text-decoration: none;
   color: black;
@@ -46,8 +48,9 @@ a {
   right: 0;
   height: 52px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  padding-right: 2rem;
+
 }
 
 .footer {
@@ -57,7 +60,14 @@ a {
   right: 0;
   height: 52px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  padding-right: 2rem;
   background: #eee;
+}
+
+.content .buttons {
+  display: flex;
+  gap: 16px;
+  list-style: none;
+  align-content: center;
 }
