--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -8,6 +8,10 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  padding-left: 16px;
+  display: flex;
+  align-items: center;
 }
 
 .footer {
@@ -19,12 +23,15 @@ body {
 .sidebar {
   width: 300px;
   background: royalblue;
+  display: flex;
 }
 
 .card {
-  border: 1px solid #eee;
+  /*border: 1px solid #eee;*/
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  margin: 16px;
 }
 
 a {
@@ -34,4 +41,18 @@ a {
 
 div ul {
   list-style: none;
+}
+
+.blue-xbox-controller {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
+
+* {
+  /* border: 2px solid black;
+  display: flex;
+  flex-direction: column; Still questioning whether I will need this code so keep it just in case */
 }
